=======
CHANGES
=======

3.8.1 (unreleased)
------------------

- Fixed test_directive. Some parts of zope.app.publisher were moved
  to zope.browsermenu and zope.browserpage.
- Moved tests/test_view_permissions.py to browser/tests.

3.8.0 (2009-05-13)
------------------

- Moved ``IAdding`` interface to ``zope.browser.interfaces``, leaving
  BBB imports.

3.7.2 (2009-03-12)
------------------

- Show a "nothing to add" message instead of empty list in the
  adding view, if there's nothing to add.

- Don't show the "Add" menu item if there's nothing to add.

- Adapt to the removal of deprecated interfaces from
  ``zope.component.interfaces``. Now ``IAdding`` inherits from
  ``zope.publisher.interfaces.browser.IBrowserView``.

3.7.1 (2009-02-05)
-------------------

- Updated test to accomodate "Pythonic" exception now raised from
  ``__setitem__`` provided by ``zope.container`` (``KeyError`` instead
  of ``zope.exceptions.UserError``).

3.7.0 (2009-01-31)
------------------

- Remove long-time deprecated ``IContentContainer`` class.

- We now rely on a new package called ``zope.container``, which
  contains the basic implementation of ``zope.container`` and is
  intended to have less dependencies. We have gone through a wide
  range of packages and updated their dependencies to point to
  ``zope.container`` so that they will also have less indirect
  dependencies.

  For backwards compatibility we have left the original modules in
  ``zope.app.container`` in place and have placed imports to make sure
  the symbols exist in their original locations.

3.6.2 (2008-10-21)
------------------

- Fixed bug in ``_zope_app_container_contained.c``.

3.6.1 (2008-10-15)
------------------

- Reimplemented the ``BTreeContainer`` so that it directly accesses the btree
  methods (removed an old #TODO)

- Removed usage of deprecated ``LayerField``.

- Made C code compatible with Python 2.5 on 64bit architectures.
