@@ -70,6 +70,7 @@ setup(name='zope.app.container',
                         'zope.security',
                         'zope.size',
                         'zope.traversing',
+                        'zope.app.publisher',
                         ],
       include_package_data = True,
       zip_safe = False,
